# 23.05.2025

./: .readme.md.swp  CMakeLists.txt
.github/workflows/: rk2.yml
_build/: Makefile
_build/_CPack_Packages/Linux-Source/TGZ/Chat_room-0.1.0.0-Source/ /_build/: CMakeCache.txt  CPackSourceConfig.cmake  CTestTestfile.cmake  cmake_install.cmake
_build/_CPack_Packages/Linux-Source/TGZ/Chat_room-0.1.0.0-Source/ /_build/_CPack_Packages/Linux/DEB/: rk2-0.1.0.0.deb
_build/_CPack_Packages/Linux-Source/TGZ/Chat_room-0.1.0.0-Source/ /source/: chat_room.cpp
_build/_CPack_Packages/Linux-Source/ZIP/Chat_room-0.1.0.0-Source/ /_build/: install_manifest.txt
_build/_CPack_Packages/Linux-Source/ZIP/Chat_room-0.1.0.0-Source/ /_build/_CPack_Packages/Linux-Source/TGZ/Chat_room-0.1.0.0-Source/ /: CMakeLists.txt  CPackConfig.cmake
_build/_CPack_Packages/Linux-Source/ZIP/Chat_room-0.1.0.0-Source/ /_build/_CPack_Packages/Linux-Source/TGZ/Chat_room-0.1.0.0-Source/ /_build/: CPackConfig.cmake  Chat_room-0.1.0.0-Linux.deb  my_test
_build/_CPack_Packages/Linux-Source/ZIP/Chat_room-0.1.0.0-Source/ /_build/_CPack_Packages/Linux-Source/TGZ/Chat_room-0.1.0.0-Source/ /_build/_CPack_Packages/Linux/DEB/Chat_room-0.1.0.0-Linux/: control  md5sums
_build/_CPack_Packages/Linux-Source/ZIP/Chat_room-0.1.0.0-Source/ /include/: chat_room.h
_build/_CPack_Packages/Linux-Source/ZIP/Chat_room-0.1.0.0-Source/ /source/: main.cpp
tests/: tests.cpp
